--- a/css/portfolioCss/grayscale.scss
+++ b/css/portfolioCss/grayscale.scss
@@ -98,7 +98,7 @@ a {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+  background: url(../portfolioImgs/intro-bg.jpg) no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -154,19 +154,42 @@ a {
     margin: 2px 0;
 }
 
+.overlay {
+    background: rgba(0, 0, 0, 0.75);
+    height: 100%;
+    position: relative;
+    bottom: 2rem;
+    display: block;
+    opacity: 1;
+    transition: opacity 500ms ease;
+
+    p {
+      font-size: 25px;
+      color: rgba(255, 255, 255, 1);
+      padding: 2rem 0;
+      margin: 2rem 1rem;
+    }
+
+    &:hover {
+      opacity: 0;
+    }
+}
+
+
+
 .wikipedia {
-  background: url("../img/wikipedia_api.png") no-repeat center;
+  background: url("../portfolioImgs/wikipedia_api.png") no-repeat center;
   background-size: cover;
   margin-top: 40px;
 }
 
 .museum {
-  background: url("../img/museum_image.png") no-repeat center;
+  background: url("../portfolioImgs/museum_image.png") no-repeat center;
   background-size: cover;
 }
 
 .tshirt {
-  background: url("../img/tshirts.png") no-repeat center;
+  background: url("../portfolioImgs/tshirts.png") no-repeat center;
   background-size: cover;
 }
 
@@ -174,7 +197,7 @@ a {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+  background: url(../portfolioImgs/downloads-bg.jpg) no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
