--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -1,244 +1,172 @@
-/* Keep CSS Styles alphabetized. Good practice. --> http://www.styleneat.com/index.php */
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html {
-  font-size: 10px; }
-
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block; }
-
+/*!
+ * Start Bootstrap - Grayscale v4.0.0-alpha (http://startbootstrap.com/template-overviews/grayscale)
+ * Copyright 2013-2017 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
+ */
 body {
-  line-height: 1;
-  font-size: 10px; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after {
-  content: '';
-  content: none; }
-
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-.nav-links {
-  font-family: 'Lato', 'Raleway', Helvetica, Arial, sans-serif;
-  font-size: 20px;
-  float: right; }
-  .nav-links .nav-box {
-    display: inline;
-    /*border-left: 1px solid white;*/
-    padding: 10px;
-    position: relative;
-    top: 9px;
-    right: 5em; }
-    .nav-links .nav-box:first-child {
-      border-left: 1px solid white; }
-    .nav-links .nav-box:hover {
-      background: #fff; }
-      .nav-links .nav-box:hover .header-icons {
-        color: #000; }
-
-/*.header-icons {
-
-    &:visited {
-        color: inherit;
-    }
-
-    &:hover {     
-        color: #000; 
-    }
-}*/
-article {
-  font-family: Helvetica, Arial, sans-serif; }
-
-body {
-  background: url("../../imgs/portfolioImgs/city-lights-og.jpg") no-repeat center fixed;
-  /*background-size: 100%;*/
-  background-attachment: scroll;
-  max-width: 2000px;
-  max-height: auto;
-  display: inline;
+  width: 100%;
+  height: 100%;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  background-color: black;
   position: relative; }
 
-.btn {
-  -webkit-border-radius: 10;
-  -moz-border-radius: 10;
-  border-radius: 10px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  background: #3498db;
-  padding: 10px 10px 10px 10px;
-  text-decoration: none;
-  margin-top: 10px;
-  margin-bottom: -25px; }
-  .btn:hover {
-    background: #3cb0fd;
-    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-    text-decoration: none; }
+html {
+  width: 100%;
+  height: 100%; }
 
-.contact_form {
-  align-items: center;
-  font-family: 'Lato','Raleway', sans-serif;
-  margin-left: 39%;
-  margin-top: 10%;
-  z-index: 2; }
-
-embed {
-  margin-top: -35px; }
-
-footer {
-  color: white;
-  position: relative;
-  clear: both;
-  /*background: $footer-color;*/
-  height: 5rem;
-  /*To anchor footer at the bottom
-      color: white;
-      position: fixed;
-      clear: both;
-      height: 5rem;
-      bottom: 0;
-      left: 35%;*/ }
-
-form {
-  color: rgba(255, 255, 255, 0.85); }
-
-.name {
-  float: left;
-  position: relative;
-  left: 5em; }
-  .name:after {
-    content: "";
-    display: table;
-    clear: both; }
-  .name h1 {
-    color: white;
-    font-family: 'Lato','Raleway', Helvetica, Arial, sans-serif;
-    font-size: 35px;
-    text-shadow: 45px 0px 45px #000000; }
-
-header, footer {
-  text-align: center; }
-
-input[type="text"].form-input {
-  border-radius: 2px;
-  border: 5px solid white;
-  box-sizing: border-box;
-  color: #ccc;
-  display: block;
-  font-size: 14px;
-  font-style: italic;
-  outline: none;
-  padding: 5px 10px;
-  width: 300px; }
-
-input[type="text"].form-input:focus {
-  border-color: #f9d657;
-  color: #000; }
-
-.label-input-pair {
-  display: block;
-  margin: 30px 0; }
-
-label.form-label {
-  display: block;
-  font-size: 14px;
-  font-weight: bold;
-  margin-bottom: 5px;
-  outline: none; }
-
-.main {
-  margin: auto;
-  position: relative;
-  /*    transform: translateY(50%);
-      width: 50%;*/
-  z-index: 1; }
-  .main:after {
-    content: "";
-    display: table;
-    clear: both; }
-
-hr {
-  border: 1px solid rgba(255, 255, 255, 0.25);
-  display: none; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 35px;
+  text-transform: uppercase;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  letter-spacing: 1px; }
 
 p {
-  color: rgba(255, 255, 255, 0.5);
-  font-family: 'Catamaran', Helvetica, Arial, sans-serif;
-  position: relative;
-  /* left: 4rem; */
-  font-size: 35px;
-  /* float: left; */
-  margin: 2rem 4rem; }
+  margin: 0 0 25px;
+  font-size: 16px;
+  line-height: 1.5; }
 
-.fa {
-  padding: 1rem; }
-  .fa:hover {
-    color: black;
-    cursor: pointer; }
-
-nav {
-  color: white;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 20px; }
-  nav:after {
-    content: "";
-    display: table;
-    clear: both; }
-
+@media (min-width: 768px) {
+  p {
+    margin: 0 0 35px;
+    font-size: 18px;
+    line-height: 1.6; } }
 a {
+  color: #42DCA3;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out; }
+
+a:hover, a:focus {
+  text-decoration: none;
+  color: #1d9b6c; }
+
+#mainNav {
+  margin-bottom: 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  text-transform: uppercase;
+  font-family: "Cabin", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: black; }
+
+#mainNav .navbar-toggler {
   color: white;
-  margin: 10px;
-  text-decoration: none; }
+  font-size: 14px;
+  border: 1px solid white;
+  padding: 11px; }
 
-a:visited {
-  color: inherit;
-  text-decoration: none; }
+#mainNav .navbar-brand {
+  font-weight: 700; }
 
-.projects {
-  height: 50%;
-  width: 25%;
-  position: relative;
-  left: 15%;
-  opacity: 0.85; }
+#mainNav a {
+  color: white; }
 
-/*For cicular display*/
-/* .projects {
-     border-radius: 50% 50%;
-     box-sizing: border-box;
-     height: 300px;
-     left: 15%;
-     opacity: 0.85;
-     overflow: hidden;
-     position: relative;
-     text-align: center;
-     width: 300px;
-}*/
+#mainNav .navbar-nav .nav-item {
+  -webkit-transition: background .3s ease-in-out;
+  -moz-transition: background .3s ease-in-out;
+  transition: background .3s ease-in-out; }
+
+#mainNav .navbar-nav .nav-item:hover {
+  color: fade(white, 80%);
+  outline: none;
+  background-color: transparent; }
+
+#mainNav .navbar-nav .nav-item:focus, #mainNav .navbar-nav .nav-item:active {
+  outline: none;
+  background-color: transparent; }
+
+@media (min-width: 768px) {
+  #mainNav {
+    padding: 10px 0;
+    border-bottom: none;
+    letter-spacing: 1px;
+    background: rgba(0, 0, 0, 0.5);
+    -webkit-transition: background .25s ease-in-out, padding .25s ease-in-out;
+    -moz-transition: background .25s ease-in-out, padding .25s ease-in-out;
+    transition: background .25s ease-in-out, padding .25s ease-in-out; }
+
+  #mainNav.navbar-shrink {
+    padding: 10px 0;
+    background: black;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+
+  #mainNav .nav-link.active {
+    outline: none;
+    background-color: rgba(255, 255, 255, 0.3); }
+
+  #mainNav .nav-link.active:hover {
+    color: white; } }
+.masthead {
+  display: table;
+  width: 100%;
+  height: auto;
+  padding: 100px 0;
+  text-align: center;
+  color: white;
+  background: url(../../imgs/portfolioImgs/intro-bg.jpg) no-repeat bottom center scroll;
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover; }
+
+.masthead .intro-body {
+  display: table-cell;
+  vertical-align: middle; }
+
+.masthead .intro-body .brand-heading {
+  font-size: 40px; }
+
+.masthead .intro-body .intro-text {
+  font-size: 18px; }
+
+@media (min-width: 768px) {
+  .masthead {
+    height: 100%;
+    padding: 0; }
+
+  .masthead .intro-body .brand-heading {
+    font-size: 75px;
+    font-weight: 100;
+    border-bottom: 1px solid #fff;
+    border-top: 1px solid #fff; }
+
+  .masthead .intro-body .intro-text {
+    font-size: 22px; } }
+.btn-circle {
+  width: 50px;
+  height: 50px;
+  margin-top: 15px;
+  padding: 7px 0;
+  border: 2px solid white;
+  border-radius: 100% !important;
+  font-size: 26px;
+  color: white;
+  background: transparent;
+  -webkit-transition: background .3s ease-in-out;
+  -moz-transition: background .3s ease-in-out;
+  transition: background .3s ease-in-out; }
+
+.btn-circle:hover, .btn-circle:focus {
+  outline: none;
+  color: white;
+  background: rgba(255, 255, 255, 0.1); }
+
+.content-section {
+  padding-top: 100px; }
+
+.project-imgs {
+  height: 244px;
+  width: 100%;
+  float: left;
+  border: 2px solid white;
+  margin: 2px 0; }
+
 .overlay {
   background: rgba(0, 0, 0, 0.75);
   height: 100%;
@@ -246,20 +174,7 @@ a:visited {
   bottom: 2rem;
   display: block;
   opacity: 1;
-  transition: opacity 500ms ease;
-  /*For circular display :
-  /*.overlay {
-       background: rgba(0, 0, 0, 0.75);
-       box-sizing: border-box;
-       display: block;
-       height: 100%;
-       left: 0;
-       opacity: 1;
-       padding: 7rem 1rem 0;
-       position: absolute;
-       top: 0;
-       transition: opacity 500ms ease;
-       width: 100%;*/ }
+  transition: opacity 500ms ease; }
   .overlay p {
     font-size: 25px;
     color: white;
@@ -268,88 +183,108 @@ a:visited {
   .overlay:hover {
     opacity: 0; }
 
-.wrapper {
-  position: relative;
-  /*left: 15%; */
-  margin: 5rem auto;
-  width: 100%; }
-  .wrapper:after {
-    content: "";
-    display: table;
-    clear: both; }
-
-.code-pen {
+.wikipedia {
   background: url("../../imgs/portfolioImgs/wikipedia_api.png") no-repeat center;
-  background-size: 360px 300px;
-  float: left; }
+  background-size: cover;
+  margin-top: 40px; }
 
 .museum {
   background: url("../../imgs/portfolioImgs/museum_image.png") no-repeat center;
-  background-size: 360px 300px;
-  float: left; }
+  background-size: cover; }
 
-.tshirt-widget {
-  background: url("../../imgs/portfolioImgs/blue_shirt.png") no-repeat center;
-  background-size: 270px 300px;
-  float: left;
-  width: 18%; }
+.tshirt {
+  background: url("../../imgs/portfolioImgs/tshirts.png") no-repeat center;
+  background-size: cover; }
 
-@media only screen and (max-height: 630px) {
-  .projects {
-    height: 65%; } }
-@media only screen and (max-height: 530px) {
-  .projects {
-    height: 75%; } }
-@media only screen and (max-height: 430px) {
-  .projects {
-    height: 100%; } }
-@media only screen and (min-width: 1051px) and (max-width: 1350px) {
-  .projects {
-    width: 34%;
-    left: 0; }
+.download-section {
+  width: 100%;
+  padding: 50px 0;
+  color: white;
+  background: url(../../imgs/portfolioImgs/downloads-bg.jpg) no-repeat center center scroll;
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover; }
 
-  .tshirt-widget {
-    width: 25%; } }
-@media only screen and (max-width: 1050px) {
-  .projects {
+#map {
+  width: 100%;
+  height: 200px;
+  margin-top: 100px; }
+
+@media (min-width: 767px) {
+  .content-section {
+    /*padding-top: 250px;*/ }
+
+  .project-imgs {
     width: 100%;
-    left: 0; }
+    background-size: cover;
+    height: 665px; }
 
-  .tshirt-widget {
-    width: 100%; } }
-@media only screen and (max-width: 610px) {
-  .nav-links .nav-box {
-    padding: 10px 0;
-    right: 0; } }
-@media only screen and (max-width: 500px) {
-  .name h1 {
-    font-size: 30px; }
+  .resume-section {
+    padding: 100px 0; }
 
-  .nav-links {
-    font-size: 15px; } }
-/*1350 - 1051*/
-/* ----------- iPhone 6+ ----------- */
-/* Portrait and Landscape */
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (-webkit-min-device-pixel-ratio: 3) {
-  .nav-links .nav-box {
-    padding: 10px 0;
-    right: 0; }
+  #map {
+    height: 350px;
+    margin-top: 250px; } }
+.btn {
+  text-transform: uppercase;
+  font-family: "Cabin", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  border-radius: 0; }
 
-  .name h1 {
-    font-size: 30px; }
+.btn-default {
+  border: 1px solid #42DCA3;
+  color: #42DCA3;
+  background-color: transparent; }
 
-  .nav-links {
-    font-size: 15px; } }
-/* ----------- iPhone 5 ----------- */
-/* Portrait*/
-@media only screen and (max-width: 390px) {
-  .nav {
-    width: 95%; }
+.btn-default:hover, .btn-default:focus {
+  border: 1px solid #42DCA3;
+  outline: none;
+  color: black;
+  background-color: #42DCA3; }
 
-  .nav-links {
-    font-size: 10px; }
+ul.banner-social-buttons {
+  margin-top: 0; }
 
-  .name h1 {
-    font-size: 25px; } }
+@media (max-width: 1199px) {
+  ul.banner-social-buttons {
+    margin-top: 15px; } }
+@media (max-width: 767px) {
+  ul.banner-social-buttons li {
+    display: block;
+    margin-bottom: 20px;
+    padding: 0; }
+
+  ul.banner-social-buttons li:last-child {
+    margin-bottom: 0; } }
+footer {
+  padding: 50px 0; }
+
+footer p {
+  font-size: 14px;
+  margin: 0; }
+
+::-moz-selection {
+  text-shadow: none;
+  background: #fcfcfc;
+  background: rgba(255, 255, 255, 0.2); }
+
+::selection {
+  text-shadow: none;
+  background: #fcfcfc;
+  background: rgba(255, 255, 255, 0.2); }
+
+img::selection {
+  background: transparent; }
+
+img::-moz-selection {
+  background: transparent; }
+
+body {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); }
 
 /*# sourceMappingURL=style.css.map */
