--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -1,250 +1,160 @@
-
-/* Keep CSS Styles alphabetized. Good practice. --> http://www.styleneat.com/index.php */
-
-@import 'reset';
-@import 'variables';
-@import 'mixins';
-
-$footer-color: #4B4948;
-
-.nav-links { 
-    font-family: 'Lato', 'Raleway', Helvetica, Arial, sans-serif;
-    font-size: 20px;
-    float: right;
-
-    .nav-box {
-        display: inline;
-        /*border-left: 1px solid white;*/
-        padding: 10px;
-        position: relative;
-        top: 9px;
-        right: 5em;
-
-        &:first-child {
-            border-left: 1px solid white;
-        }
-
-        &:hover {
-            
-            background: #fff;
-
-            .header-icons {
-                color: #000;
-            }
-        }
-    }
-}
-
-/*.header-icons {
-
-    &:visited {
-        color: inherit;
-    }
-
-    &:hover {     
-        color: #000; 
-    }
-}*/
- 
-article { font-family: Helvetica, Arial, sans-serif; }
- 
+/*!
+ * Start Bootstrap - Grayscale v4.0.0-alpha (http://startbootstrap.com/template-overviews/grayscale)
+ * Copyright 2013-2017 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
+ */
 body {
-    background: url("../../imgs/portfolioImgs/city-lights-og.jpg") no-repeat center fixed;
-    /*background-size: 100%;*/
-    background-attachment: scroll;
-    max-width: 2000px;
-    max-height: auto;
-    display: inline;
-    position: relative; 
-}
- 
-.btn {
-    -webkit-border-radius: 10;
-    -moz-border-radius: 10;
-    border-radius: 10px;
-    font-family: Arial;
-    color: #ffffff;
-    font-size: 20px;
-    background: #3498db;
-    padding: 10px 10px 10px 10px;
-    text-decoration: none;
-    margin-top: 10px;
-    margin-bottom: -25px;
+  width: 100%;
+  height: 100%;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  background-color: black;
+  position: relative; }
 
-    &:hover {
-        background: #3cb0fd;
-        background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-        background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-        background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-        background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-        background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-        text-decoration: none;
-    }
-}
+html {
+  width: 100%;
+  height: 100%; }
 
- 
-.contact_form {
-    align-items: center;
-    font-family: 'Lato','Raleway', sans-serif;
-    margin-left: 39%;
-    margin-top: 10%;
-    z-index: 2; }
-
-embed {
-    margin-top: -35px;
-}
- 
- 
-footer {
-    color: white;
-    position: relative;
-    clear: both;
-    /*background: $footer-color;*/
-    height: 5rem;
-
-
-/*To anchor footer at the bottom
-    color: white;
-    position: fixed;
-    clear: both;
-    height: 5rem;
-    bottom: 0;
-    left: 35%;*/
-
-}
- 
-.footer-content {
-
-}
-
-
-form { 
-    color: rgba(255, 255, 255, 0.85);
-}
- 
-.name {
-    float: left;
-    @include clearfix;
-    position: relative;
-    left: 5em;
-
-    h1 {
-        color: white;
-        font-family: 'Lato','Raleway', Helvetica, Arial, sans-serif;
-        font-size: 35px;
-        text-shadow: 45px 0px 45px #000000;
-
-    }
-}
-
- 
-header, footer { text-align: center; }
- 
- 
-input[type="text"].form-input {
-    border-radius: 2px;
-    border: 5px solid white;
-    box-sizing: border-box;
-    color: #ccc;
-    display: block;
-    font-size: 14px;
-    font-style: italic;
-    outline: none;
-    padding: 5px 10px;
-    width: 300px; }
- 
-    input[type="text"].form-input:focus {
-        border-color: #f9d657;
-        color: #000; }
-
-.label-input-pair {
-    display: block;
-    margin: 30px 0; }
- 
- 
-label.form-label {
-    display: block;
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 5px;
-    outline: none; }
- 
- 
-.main {
-    @include clearfix;
-    margin: auto;
-    position: relative;
-/*    transform: translateY(50%);
-    width: 50%;*/
-    z-index: 1;
-  }
-
-  hr {
-    border: 1px solid rgba(255, 255, 255, 0.25);
-    display: none;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 0 35px;
+  text-transform: uppercase;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 700;
+  letter-spacing: 1px; }
 
 p {
-    color: rgba(255, 255, 255, 0.5);
-    font-family: 'Catamaran', Helvetica, Arial, sans-serif;
-    position: relative;
-    /* left: 4rem; */
-    font-size: 35px;
-    /* float: left; */
-    margin: 2rem 4rem;
-}
+  margin: 0 0 25px;
+  font-size: 16px;
+  line-height: 1.5; }
+  @media (min-width: 768px) {
+    p {
+      margin: 0 0 35px;
+      font-size: 18px;
+      line-height: 1.6; } }
 
-.fa {
-    padding: 1rem;
-
-    &:hover {
-        color: black;
-        cursor: pointer;
-    }
-}
- 
- 
-nav {
-    @include clearfix;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 20px;
-}
-
- a {
-    color: white;
-    margin: 10px;
+a {
+  color: #42DCA3;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out; }
+  a:hover, a:focus {
     text-decoration: none;
- }
+    color: #1d9b6c; }
 
- a:visited {
-    color: inherit;
-    text-decoration: none;
- }
+#mainNav {
+  margin-bottom: 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  text-transform: uppercase;
+  font-family: "Cabin", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: black; }
+  #mainNav .navbar-toggler {
+    color: white;
+    font-size: 14px;
+    border: 1px solid white;
+    padding: 11px; }
+  #mainNav .navbar-brand {
+    font-weight: 700; }
+  #mainNav a {
+    color: white; }
+  #mainNav .navbar-nav .nav-item {
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    transition: background .3s ease-in-out; }
+    #mainNav .navbar-nav .nav-item:hover {
+      color: fade(white, 80%);
+      outline: none;
+      background-color: transparent; }
+    #mainNav .navbar-nav .nav-item:focus, #mainNav .navbar-nav .nav-item:active {
+      outline: none;
+      background-color: transparent; }
+  @media (min-width: 768px) {
+    #mainNav {
+      padding: 10px 0;
+      border-bottom: none;
+      letter-spacing: 1px;
+      background: rgba(0, 0, 0, 0.5);
+      -webkit-transition: background .25s ease-in-out, padding .25s ease-in-out;
+      -moz-transition: background .25s ease-in-out, padding .25s ease-in-out;
+      transition: background .25s ease-in-out, padding .25s ease-in-out; }
+      #mainNav.navbar-shrink {
+        padding: 10px 0;
+        background: black;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
+      #mainNav .nav-link.active {
+        outline: none;
+        background-color: rgba(255, 255, 255, 0.3); }
+        #mainNav .nav-link.active:hover {
+          color: white; } }
 
- .projects {
-    height: 50%;
-    width: 25%;
-    position: relative;
-    left: 15%;
-    opacity: 0.85;
+.masthead {
+  display: table;
+  width: 100%;
+  height: auto;
+  padding: 100px 0;
+  text-align: center;
+  color: white;
+  background: url(../../imgs/portfolioImgs/intro-bg.jpg) no-repeat bottom center scroll;
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover; }
+  .masthead .intro-body {
+    display: table-cell;
+    vertical-align: middle; }
+    .masthead .intro-body .brand-heading {
+      font-size: 40px; }
+    .masthead .intro-body .intro-text {
+      font-size: 18px; }
+  @media (min-width: 768px) {
+    .masthead {
+      height: 100%;
+      padding: 0; }
+      .masthead .intro-body .brand-heading {
+        font-size: 75px;
+        font-weight: 100; 
+        border-bottom: 1px solid #fff;
+        border-top: 1px solid #fff;
+      }
+      .masthead .intro-body .intro-text {
+        font-size: 22px; } }
 
- }
+.btn-circle {
+  width: 50px;
+  height: 50px;
+  margin-top: 15px;
+  padding: 7px 0;
+  border: 2px solid white;
+  border-radius: 100% !important;
+  font-size: 26px;
+  color: white;
+  background: transparent;
+  -webkit-transition: background .3s ease-in-out;
+  -moz-transition: background .3s ease-in-out;
+  transition: background .3s ease-in-out; }
+  .btn-circle:hover, .btn-circle:focus {
+    outline: none;
+    color: white;
+    background: rgba(255, 255, 255, 0.1); }
 
-/*For cicular display*/
-/* .projects {
-     border-radius: 50% 50%;
-     box-sizing: border-box;
-     height: 300px;
-     left: 15%;
-     opacity: 0.85;
-     overflow: hidden;
-     position: relative;
-     text-align: center;
-     width: 300px;
-}*/
+.content-section {
+  padding-top: 100px; }
 
- .overlay {
+.project-imgs {
+    
+    height: 244px;
+    width: 100%;
+    float: left;
+    border: 2px solid white;
+    margin: 2px 0;
+}
+
+.overlay {
     background: rgba(0, 0, 0, 0.75);
     height: 100%;
     position: relative;
@@ -253,172 +163,125 @@ nav {
     opacity: 1;
     transition: opacity 500ms ease;
 
-
-/*For circular display :
-/*.overlay {
-     background: rgba(0, 0, 0, 0.75);
-     box-sizing: border-box;
-     display: block;
-     height: 100%;
-     left: 0;
-     opacity: 1;
-     padding: 7rem 1rem 0;
-     position: absolute;
-     top: 0;
-     transition: opacity 500ms ease;
-     width: 100%;*/
-
-
     p {
-        font-size: 25px;
-        color: rgba(255, 255, 255, 1);
-        padding: 2rem 0;
-        margin: 2rem 1rem;
+      font-size: 25px;
+      color: rgba(255, 255, 255, 1);
+      padding: 2rem 0;
+      margin: 2rem 1rem;
     }
 
     &:hover {
-        opacity: 0;
+      opacity: 0;
     }
- }
+}
 
-.wrapper {
-    @include clearfix;
-    position: relative;
-    /*left: 15%; */
-    margin: 5rem auto;
+
+
+.wikipedia {
+  background: url("../../imgs/portfolioImgs/wikipedia_api.png") no-repeat center;
+  background-size: cover;
+  margin-top: 40px;
+}
+
+.museum {
+  background: url("../../imgs/portfolioImgs/museum_image.png") no-repeat center;
+  background-size: cover;
+}
+
+.tshirt {
+  background: url("../../imgs/portfolioImgs/tshirts.png") no-repeat center;
+  background-size: cover;
+}
+
+.download-section {
+  width: 100%;
+  padding: 50px 0;
+  color: white;
+  background: url(../../imgs/portfolioImgs/downloads-bg.jpg) no-repeat center center scroll;
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover; }
+
+#map {
+  width: 100%;
+  height: 200px;
+  margin-top: 100px; }
+
+@media (min-width: 767px) {
+  .content-section {
+    /*padding-top: 250px;*/ 
+    }
+
+  .project-imgs {
     width: 100%;
-}
-
- .code-pen {
-    background: url("../../imgs/portfolioImgs/wikipedia_api.png") no-repeat center;
-    background-size: 360px 300px;
-    float: left;
- }
-
- .museum {
-    background: url("../../imgs/portfolioImgs/museum_image.png") no-repeat center;
-    background-size: 360px 300px;
-    float: left;
-
- }
- 
- .tshirt-widget {
-    background: url("../../imgs/portfolioImgs/blue_shirt.png") no-repeat center;
-    background-size: 270px 300px;
-    float: left;
-    width: 18%;
- }
-
-@media only screen and (max-height: 630px) {
-    .projects {
-        height: 65%;
-    }
-}
-
-@media only screen and (max-height: 530px) {
-    .projects {
-        height: 75%;
-    }
-}
-
-@media only screen and (max-height: 430px) {
-    .projects {
-        height: 100%;
-    }
-}
-
-
-@media only screen and (min-width: 1051px) and (max-width: 1350px) {
-    .projects {
-        width: 34%;
-        left: 0;
+    background-size: cover;
+    height: 665px;
     }
 
-    .tshirt-widget {
-        width: 25%;
+  .resume-section {
+    padding: 100px 0; 
     }
-}
+  #map {
+    height: 350px;
+    margin-top: 250px; 
+    } 
+  }
 
-@media only screen and (max-width: 1050px) {
-    .projects {
-        width: 100%;
-        left: 0;
-    }
+.btn {
+  text-transform: uppercase;
+  font-family: "Cabin", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  border-radius: 0; }
 
-    .tshirt-widget {
-        width: 100%;
-    }
-}
+.btn-default {
+  border: 1px solid #42DCA3;
+  color: #42DCA3;
+  background-color: transparent; }
+  .btn-default:hover, .btn-default:focus {
+    border: 1px solid #42DCA3;
+    outline: none;
+    color: black;
+    background-color: #42DCA3; }
 
-@media only screen and (max-width: 610px) {
-    .nav-links {
-        .nav-box {
-            padding: 10px 0;
-            right: 0;
-        }
-    }
+ul.banner-social-buttons {
+  margin-top: 0; }
+  @media (max-width: 1199px) {
+    ul.banner-social-buttons {
+      margin-top: 15px; } }
+  @media (max-width: 767px) {
+    ul.banner-social-buttons li {
+      display: block;
+      margin-bottom: 20px;
+      padding: 0; }
+      ul.banner-social-buttons li:last-child {
+        margin-bottom: 0; } }
 
-}
+footer {
+  padding: 50px 0; }
+  footer p {
+    font-size: 14px;
+    margin: 0; }
 
-@media only screen and (max-width: 500px) {
-    .name {
-        h1 {
-            font-size: 30px;
-        }
-    }
+::-moz-selection {
+  text-shadow: none;
+  background: #fcfcfc;
+  background: rgba(255, 255, 255, 0.2); }
 
-    .nav-links {
-        font-size: 15px;
-    }
-}
+::selection {
+  text-shadow: none;
+  background: #fcfcfc;
+  background: rgba(255, 255, 255, 0.2); }
 
+img::selection {
+  background: transparent; }
 
-/*1350 - 1051*/
+img::-moz-selection {
+  background: transparent; }
 
-/* ----------- iPhone 6+ ----------- */
-
-/* Portrait and Landscape */
-@media only screen 
-  and (min-device-width: 414px) 
-  and (max-device-width: 736px) 
-  and (-webkit-min-device-pixel-ratio: 3) { 
-
-    .nav-links {
-        .nav-box {
-            padding: 10px 0;
-            right: 0;
-        }
-    }    
-
-    .name {
-        h1 {
-            font-size: 30px;
-        }
-    }
-
-    .nav-links {
-        font-size: 15px;
-    }
-}
-
-/* ----------- iPhone 5 ----------- */
-/* Portrait*/
-@media only screen and (max-width: 390px) {
-    .nav {
-        width: 95%;
-    }
-
-    .nav-links {
-        font-size: 10px;
-    }
-
-    .name {
-        h1 {
-            font-size: 25px;
-        }
-    }
-}
-
-
-
-
+body {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); }
